Quitamos un error en las imagenes

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         
     <div class="content-all">
         <div class="content-carrousel">
-            <figure><img src="/img2/pexels-aman-jakhar-1124466.jpg"></figure>
-            <figure><img src="/img2/pexels-athul-adhu-684152.jpg"></figure>
-            <figure><img src="/img2/pexels-jd-danny-2385477.jpg"></figure>
-            <figure><img src="/img2/pexels-ray-piedra-1456706.jpg"></figure>
-            <figure><img src="/img2/pexels-shane-aldendorff-1054787.jpg"></figure>
-            <figure><img src="/img2/pexels-shane-aldendorff-786003.jpg"></figure>
+            <figure><img src="img2/pexels-aman-jakhar-1124466.jpg"></figure>
+            <figure><img src="img2/pexels-athul-adhu-684152.jpg"></figure>
+            <figure><img src="img2/pexels-jd-danny-2385477.jpg"></figure>
+            <figure><img src="img2/pexels-ray-piedra-1456706.jpg"></figure>
+            <figure><img src="img2/pexels-shane-aldendorff-1054787.jpg"></figure>
+            <figure><img src="img2/pexels-shane-aldendorff-786003.jpg"></figure>
         </div>
     </div>
 
@@ -81,7 +81,7 @@
 
             <article class="col-6 col-lg-3">
                  <figure class="producto">
-                 <img src="/imagenes/pexels-wallace-chuck-3261069.jpg" class="img-fluid" alt="">
+                 <img src="imagenes/pexels-wallace-chuck-3261069.jpg" class="img-fluid" alt="">
                 <figcaption class="overlay">
                 <p class="overlay-texto">ADIDAS</p>
                  </figcaption>
@@ -90,7 +90,7 @@
 
             <article class="col-6 col-lg-3">
                 <figure class="producto">
-                <img src="/img2/pexels-matías-páez-14122164.jpg" class="img-fluid" alt="">
+                <img src="img2/pexels-matías-páez-14122164.jpg" class="img-fluid" alt="">
                 <figcaption class="overlay">
                 <p class="overlay-texto">PUMA</p>
                  </figcaption>
@@ -99,7 +99,7 @@
 
             <article class="col-6 col-lg-3">
                 <figure class="producto">
-                <img src="/imagenes/pexels-antonio-dillard-4462781.jpg" class="img-fluid" alt="">
+                <img src="imagenes/pexels-antonio-dillard-4462781.jpg" class="img-fluid" alt="">
                 <figcaption class="overlay">
                 <p class="overlay-texto">NIKE</p>
                 </figcaption>
@@ -108,7 +108,7 @@
 
             <article class="col-6 col-lg-3">
                 <figure class="producto">
-                <img src="/img2/pexels-anastasia-shuraeva-4944973.jpg" class="img-fluid" alt="">
+                <img src="img2/pexels-anastasia-shuraeva-4944973.jpg" class="img-fluid" alt="">
                 <figcaption class="overlay">
                 <p class="overlay-texto">NEW BALANCE</p>
                 </figcaption>
@@ -130,7 +130,7 @@
             <div class="row acerca de justify-content-around">
                 <article class="col-10 col-sm-5">
                     <figure class="text-center">
-                        <img src="/imagenes/icons8-equipo-50.png" alt="">
+                        <img src="imagenes/icons8-equipo-50.png" alt="">
                         <figcaption> 
                         <p>
                         <strong class="mb-2">Un equipo de expertos</strong>
@@ -143,7 +143,7 @@
 
                 <article class="col-10 col-sm-5">
                     <figure class="text-center">
-                        <img src="/imagenes/icons8-envío-50.png" alt="">
+                        <img src="imagenes/icons8-envío-50.png" alt="">
                         <figcaption> 
                         <p>
                         <strong class="mb-2">Envíos hacia todo el país</strong>
@@ -159,13 +159,13 @@
             <div class="container-fluid px-0 galeria">
                 <div class="row justify-content-center mx-0 px-0">
                     <div class="col-4 px-0 mx-0">
-                    <img src="/imagenes/pexels-wallace-chuck-3261069.jpg" alt="">
+                    <img src="imagenes/pexels-wallace-chuck-3261069.jpg" alt="">
                     </div>
                     <div class="col-4 px-0 mx-0">
-                    <img src="/imagenes/pexels-mnz-1598505.jpg" alt="">
+                    <img src="imagenes/pexels-mnz-1598505.jpg" alt="">
                     </div>
                     <div class="col-4 px-0 mx-0">
-                    <img src="/imagenes/pexels-mister-mister-3490360.jpg" alt="">
+                    <img src="imagenes/pexels-mister-mister-3490360.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
         <div class="w100 mb-4">
             <div>
             <p class="border-buttom border-top">
-            <img src="/imagenes/telefono.jpeg" alt="">
+            <img src="imagenes/telefono.jpeg" alt="">
             tel: 3153509349</p>
             </div> 
         </div>
@@ -197,16 +197,16 @@
     <footer class="row justify-content-center redes-sociales">
 
         <div class="col-auto">
-        <a href="#"><img src="/imagenes/facebook.jpeg" alt=""></a>
-        <a href=""><img src="/imagenes/insta.jpeg" alt=""></a>
-        <a href="#"><img src="/imagenes/twitter.jpeg" alt=""></a>
+        <a href="#"><img src="imagenes/facebook.jpeg" alt=""></a>
+        <a href=""><img src="imagenes/insta.jpeg" alt=""></a>
+        <a href="#"><img src="imagenes/twitter.jpeg" alt=""></a>
         </div>
 
     </footer>
 
     <div class="container-boton">
         <a href="https://wa.me/987654321?text=Quiero%20realizar%20un%20proyecto%20web%20php" target="_blank">
-        <img class="boton" src="/imagenes/icons8-whatsapp-48.png" alt=""></a>
+        <img class="boton" src="imagenes/icons8-whatsapp-48.png" alt=""></a>
     </div>
 
     
